fix card internal left align under any parent

--- a/assets/ng/src/app/card-detail/card-detail.component.css
+++ b/assets/ng/src/app/card-detail/card-detail.component.css
@@ -8,6 +8,7 @@
   vertical-align: top;
   position:relative;
   color:black;
+  text-align:left;;
   background-color:#a7a7a7;
 }
 :host.white {
